--- a/docker/Views/charge/charge.cshtml
+++ b/docker/Views/charge/charge.cshtml
@@ -10,6 +10,7 @@
         </div>
         <el-tree ref="tree" :data="classes" :current-node-key="classesSelectId" :highlight-current="true" node-key="value" :default-expand-all="true" :expand-on-click-node="false" @@node-click="handleNodeClick" @@check-change="handleNodeClick" style="border:none;"></el-tree>
     </div>
+    <div class="wln-line"></div>
     <div style="display:table-cell;">
         <div v-loading="loading" style="margin:0px 10px">
             <div class="wln-subtitle">
@@ -25,7 +26,7 @@
                 <el-table-column width="120" align="center" label="班级" property="classname"></el-table-column>
                 <el-table-column width="90" align="right" label="余额" property="balance"></el-table-column>
                 <el-table-column></el-table-column>
-                <el-table-column width="400" align="center" label="操作">
+                <el-table-column width="420" align="center" label="操作">
                     <template scope="scope">
                         <el-tooltip content="生成和发送缴费清单及按月扣费" placement="bottom">
                             <el-button size="mini" type="primary" @@click="location.href='feeorder?student=' + scope.row.id">缴费清单</el-button>
