--- a/docker/Views/_master.cshtml
+++ b/docker/Views/_master.cshtml
@@ -3,16 +3,16 @@
 <head>
     <meta charset="utf-8">
     <title>Wlniao.i</title>
-    <link rel="stylesheet" href="@ViewBag.iHost/xcenter.css" />
+    <link rel="stylesheet" href="@ViewBag.iHost/xcenter.css?v=1712" />
     <link rel="stylesheet" href="@ViewBag.iHost/vue/element-ui/theme-chalk/index.css" />
-    <link rel="stylesheet" href="@ViewBag.iHost/vue/el-xcenter.css" />
+    <link rel="stylesheet" href="@ViewBag.iHost/vue/el-xcenter.css?v=1712" />
     <script type="text/javascript" src="@ViewBag.iHost/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="@ViewBag.iHost/vue/vue.min.js"></script>
     <script type="text/javascript" src="@ViewBag.iHost/vue/vue-router.js"></script>
     <script type="text/javascript" src="@ViewBag.iHost/vue/vue-xcenter.js"></script>
     <script type="text/javascript" src="@ViewBag.iHost/vue/element-ui/index.js"></script>
     <script type="text/javascript" src="@ViewBag.iHost/iconfont/iconfont.js"></script>
-    <script type="text/javascript" src="@ViewBag.iHost/jsapi.js"></script>
+    <script type="text/javascript" src="@ViewBag.iHost/jsapi.js?v=1712"></script>
     <style>
         .popover-btns button{margin:3px;}
     </style>
