--- a/docker/Views/app/control.cshtml
+++ b/docker/Views/app/control.cshtml
@@ -1,5 +1,5 @@
 ﻿<div id="app" class="wln">
-    <div class="wln-title">校园信息管理</div>
+    <div class="wln-subtitle">校园信息管理</div>
     <el-card class="card" :body-style="{padding:'0px'}" onclick="location.href = 'classes'">
         <img class="image" src="/icons/classes.svg">
         <div class="bottom">班级设置</div>
@@ -12,7 +12,7 @@
         <img class="image" src="/icons/staff.svg">
         <div class="bottom">师资管理</div>
     </el-card>
-    <div class="wln-title">缴费功能管理</div>
+    <div class="wln-subtitle">缴费功能管理</div>
     <el-card class="card" :body-style="{padding:'0px'}" onclick="location.href = 'feescale'">
         <img class="image" src="/icons/feescale.svg">
         <div class="bottom">缴费项目</div>
@@ -34,7 +34,7 @@
         <div class="bottom">退费管理</div>
     </el-card>
 
-    <div class="wln-title">全校信息管理</div>
+    <div class="wln-subtitle">全校信息管理</div>
     <el-card class="card all" :body-style="{padding:'0px'}" onclick="location.href = 'term'">
         <img class="image" src="/icons/term.svg">
         <div class="bottom">学期管理</div>
