--- a/docker/Views/charge/charge.cshtml
+++ b/docker/Views/charge/charge.cshtml
@@ -13,7 +13,7 @@
     <div class="wln-line"></div>
     <div style="display:table-cell;">
         <div v-loading="loading" style="margin:0px 10px">
-            <div class="wln-subtitle">
+            <div class="wln-title">
                 <span style="float:right;">
                     <el-button size="mini" type="info" :plain="true" onclick="history.back()">返回</el-button>
                     <el-button size="mini" type="primary" onclick="location.href='retainer'" v-if="classesSelectId">预缴费用管理<i class="el-icon-d-arrow-right el-icon--right"></i></el-button>
