--- a/docker/Views/charge/discountall.cshtml
+++ b/docker/Views/charge/discountall.cshtml
@@ -1,6 +1,6 @@
 ﻿<div id="app">
     <div style="margin:0px 10px;">
-        <div class="wln-subtitle">
+        <div class="wln-title">
             <div style="float:right">
                 <el-button size="mini" type="info" :plain="true" onclick="location.href = 'control'">返回</el-button>
                 <el-button size="mini" type="success" @@click="stopVerify()" v-if="DiscountVerify">已启用审核</el-button>
