--- a/docker/Views/charge/refundall.cshtml
+++ b/docker/Views/charge/refundall.cshtml
@@ -1,6 +1,6 @@
 ﻿<div id="app">
     <div style="margin:0px 10px;">
-        <div class="wln-subtitle">
+        <div class="wln-title">
             <div style="float:right">
                 <el-button size="small" :plain="true" onclick="location.href = 'control'">返回</el-button>
                 <input type="text" v-model="key" :value="key" @@keydown="search($event)" placeholder="按回车键进行查找" />
