--- a/docker/Views/charge/retainer.cshtml
+++ b/docker/Views/charge/retainer.cshtml
@@ -1,7 +1,7 @@
 ﻿<div id="app"><router-view></router-view></div>
 <template id="app-list">
     <div style="margin:0px 10px;">
-        <div class="wln-subtitle">
+        <div class="wln-title">
             <div style="float:right">
                 <el-button size="mini" :plain="true" type="info" onclick="history.back()">返回</el-button>
                 <el-button size="mini" type="primary" @@click="toAdd">预缴充值</el-button>
