--- a/docker/Views/school/entrance.cshtml
+++ b/docker/Views/school/entrance.cshtml
@@ -14,7 +14,7 @@
 </div>
 <template id="app-list" ref="list">
     <div style="margin:0px 10px">
-        <div class="wln-subtitle">
+        <div class="wln-title">
             <span style="float:right;">
                 <el-button size="mini" type="info" :plain="true" onclick="history.back()">返回</el-button>
                 <el-button size="mini" type="primary" onclick="router.push('/entrance/add')" v-if="classesSelectId">学员入学</el-button>
