--- a/docker/Views/app/grade.cshtml
+++ b/docker/Views/app/grade.cshtml
@@ -3,10 +3,9 @@
 </style>
 <div id="app">
     <div style="margin: 0px 10px;">
-        <div class="wln-subtitle">
+        <div class="wln-title">
             年级管理 <el-button size="mini" :plain="true" type="info" onclick="location.href = 'control'">返回</el-button>
         </div>
-        <div class="wln-line" style="padding-top:8px;"></div>
         <div>
             <el-select v-model="school" clearable placeholder="请选择要管理的校园" @@change="schoolChange" style="width:320px;">
                 <el-option v-for="item in organs" :label="item.name" :value="item.id">
