--- a/docker/Views/app/staff.cshtml
+++ b/docker/Views/app/staff.cshtml
@@ -1,7 +1,7 @@
 ﻿<div id="app"><router-view></router-view></div>
 <template id="app-list">
     <div style="margin: 0px 10px;">
-        <div class="wln-subtitle">
+        <div class="wln-title">
             <div style="float:right">
                 <el-button size="small" :plain="true" type="info" onclick="location.href = 'control'">返回</el-button>
                 <el-button size="small" type="primary" onclick="router.push('/staff/add')" v-if="editer">新增师资人员</el-button>
