--- a/docker/Views/app/term.cshtml
+++ b/docker/Views/app/term.cshtml
@@ -1,7 +1,7 @@
-﻿<div id="app"><router-view></router-view></div>
+﻿<div id="app" class="wln"><router-view></router-view></div>
 <template id="app-list">
-    <div style="margin: 0px 10px;">
-        <div class="wln-subtitle">
+    <div>
+        <div class="wln-title">
             <div style="float:right">
                 <el-button size="mini" type="info" :plain="true" onclick="location.href = 'control'">返回</el-button>
                 <el-button size="mini" type="primary" onclick="router.push('/term/add')" v-if="system">新增学期</el-button>
@@ -42,39 +42,37 @@
     </div>
 </template>
 <template id="app-form">
-    <div style="margin: 0px 10px;">
-        <el-form ref="form" v-model="form" label-width="0px" style="width:720px;">
-            <el-form-item>
-                <el-col :span="3" class="label">学年&nbsp;</el-col>
-                <el-col :span="18">
-                    <el-select v-model="form.year" placeholder="请选择" style="width:275px;">
-                        <el-option v-for="item in years" :label="item.label" :value="item.value"></el-option>
-                    </el-select>
-                </el-col>
-            </el-form-item>
-            <el-form-item>
-                <el-col :span="3" class="label">学期&nbsp;</el-col>
-                <el-col :span="18">
-                    <el-select v-model="form.term" placeholder="请选择" style="width:275px;">
-                        <el-option v-for="item in terms" :label="item.label" :value="item.value"></el-option>
-                    </el-select>
-                </el-col>
-            </el-form-item>
-            <el-form-item>
-                <el-col :span="3" class="label">备注&nbsp;</el-col>
-                <el-col :span="18">
-                    <el-input type="textarea" :rows="2" v-model="form.remarks"></el-input>
-                </el-col>
-            </el-form-item>
-            <el-form-item>
-                <el-col :span="3">&nbsp;</el-col>
-                <el-col :span="18">
-                    <el-button type="primary" @@click="onSubmit">提交</el-button>
-                    <el-button onclick="router.push('/term')">返回</el-button>
-                </el-col>
-            </el-form-item>
-        </el-form>
-    </div>
+    <el-form ref="form" v-model="form" label-width="0px" style="width:720px;">
+        <el-form-item>
+            <el-col :span="3" class="label">学年&nbsp;</el-col>
+            <el-col :span="18">
+                <el-select v-model="form.year" placeholder="请选择" style="width:275px;">
+                    <el-option v-for="item in years" :label="item.label" :value="item.value"></el-option>
+                </el-select>
+            </el-col>
+        </el-form-item>
+        <el-form-item>
+            <el-col :span="3" class="label">学期&nbsp;</el-col>
+            <el-col :span="18">
+                <el-select v-model="form.term" placeholder="请选择" style="width:275px;">
+                    <el-option v-for="item in terms" :label="item.label" :value="item.value"></el-option>
+                </el-select>
+            </el-col>
+        </el-form-item>
+        <el-form-item>
+            <el-col :span="3" class="label">备注&nbsp;</el-col>
+            <el-col :span="18">
+                <el-input type="textarea" :rows="2" v-model="form.remarks"></el-input>
+            </el-col>
+        </el-form-item>
+        <el-form-item>
+            <el-col :span="3">&nbsp;</el-col>
+            <el-col :span="18">
+                <el-button type="primary" @@click="onSubmit">提交</el-button>
+                <el-button onclick="router.push('/term')">返回</el-button>
+            </el-col>
+        </el-form-item>
+    </el-form>
 </template>
 <script type="text/javascript">
     var appList = Vue.extend({
