--- a/docker/Views/charge/discount.cshtml
+++ b/docker/Views/charge/discount.cshtml
@@ -1,7 +1,7 @@
 ﻿<div id="app"><router-view></router-view></div>
 <template id="app-list">
     <div style="margin:0px 10px;">
-        <div class="wln-subtitle">
+        <div class="wln-title">
             <div style="float:right">
                 <el-button size="mini" type="info" :plain="true" @@click="history.back()" v-if="student">返回</el-button>
                 <el-button size="mini" type="info" :plain="true" @@click="location.href = 'control'" v-else>返回</el-button>
