--- a/docker/Views/charge/feeorder.cshtml
+++ b/docker/Views/charge/feeorder.cshtml
@@ -14,7 +14,7 @@
 
     <div style="display:table-cell;">
         <div v-loading="loading" style="margin:0px 10px">
-            <div class="wln-subtitle">
+            <div class="wln-title">
                 <span style="float:right;">
                     @if (!string.IsNullOrEmpty(ViewBag.Student)) {<el-button size="mini" :plain="true" type="info" onclick="history.back()">返回</el-button>}
                     <el-button size="mini" :plain="true" type="info" onclick="app.refresh()">刷新</el-button>
